2002-01-27  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.h: Moved content_sent to TclWebRequest in TclWeb.h

2002-01-26  David N. Welton  <davidw@dedasys.com>

	* tests/binary.test: Added test file for binary file handling.

	* src/mod_rivet.c (Rivet_SendContent): Moved 'header_only' option
	so that the request is set up and we don't segfault.
	(Rivet_GetRivetFile): changed puts to puts -nonewline, so as to
	not add spurious newlines.

	* src/rivetCore.c (Rivet_Include): Simplified code some, with '-1'
	argument to Tcl_ReadChars.  Eliminated "lf" -translation option.

2002-01-24  David N. Welton  <davidw@dedasys.com>

	* tests/include.test: Added test for 'include' command.

2002-01-22  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c, src/channel.c, src/rivetCore.c: Switched to
	TclWeb functions for error, headers.

	* src/mod_rivet.h: Moved headers_set and headers_printed out of
	the rivet_server_conf struct and into the TclWebRequest struct.

	* src/TclWebapache.c: Moved PrintHeaders, PrintError and
	SetHeaderType from mod_rivet.c.

	* src/TclWeb.h: Added ER1, ER2 and DEFAULT_HEADER_TYPE here.

	* tests/get.test: Added some tests related to [var *].

	* tests/post.test: Added some tests related to [var *].

	* src/rivetList.c (Rivet_LassignArrayObjCmd): Use -1 instead of
	NULL when doing NewStringObj.

	* src/rivetCrypt.c: Added header file.

	* src/make.tcl: Added slightly nicer apxs handling.

	* src/mod_rivet.c: Moved StringToUtf to TclWeb.

	* src/mod_rivet.h: Removed StringToUtf macro.

	* src/TclWebapache.c: Lots of bug fixes and corrections.

	* src/rivetCore.c (Rivet_LoadEnv): Switched to TclWeb API.
	(Rivet_LoadCookies): Switched to TclWeb API.
	(Rivet_Var): Switched to TclWeb API.

2002-01-19  Damon J. Courtney <damon@unreality.com>

	* src/rivetCore.c
	    Moved authorization from its own array into the env array as
	    HTTP_USER and HTTP_PASS.

	    Added an abort_page command which halts the sending of a request.
