@@ -1,1 +1,0 @@
-int Rivet_Parser( Tcl_Obj *outbuf, FILE *openfile );
