@@ -24,5 +24,4 @@ set testfilename1 include.rvt
       </tbody>
     </table>
   </body>
-</html>
-}
+</html>}
